# d3_examples

./: .gitignore  README.md
a2a/: README.md  pyproject.toml
a2a-react/: package-lock.json
a2a-react/app/: page.tsx
a2a-react/app/api/a2a/: route.ts
a2a-react/app/api/create-chat-thread/: route.ts
a2a-react/app/api/get-chat-thread/[chatId]/: route.ts
a2a-react/app/api/stream-chat-state/: route.ts
a2a-react/app/stream-chat/: page.tsx
a2a-react/app/stream-chat/[chatId]/: page.tsx
a2a-react/components/: chat-input.tsx  chat-page.tsx  chat.tsx  navbar.tsx
a2a/common/: __init__.py  client.py  config.py  pyproject.toml
a2a/common/src/a2a_common/: config.py
a2a/crewai/: README.md  pyproject.toml  report.md
a2a/crewai/output/: report.md
a2a/crewai/src/cube_a2a_crewai/config/: agents.yaml  tasks.yaml
a2a/crewai/src/cube_a2a_crewai/tools/: custom_tool.py
a2a/crewai/src/latest_ai_development/: crew.py  main.py
a2a/crewai/src/latest_ai_development/a2a/: client.py  remote_agent_connection.py
a2a/crewai/src/latest_ai_development/tools/: custom_tool.py
a2a/examples/crewai/: README.md  __main__.py  crew.py  pyproject.toml  report.md  send_task_tool.py
a2a/examples/crewai/src/cube_a2a_crewai/: crew.py  main.py
a2a/examples/crewai/src/cube_a2a_crewai/a2a/: card_resolver.py  client.py
a2a/examples/crewai/src/cube_a2a_crewai/tools/: custom_tool.py
a2a/examples/jsonrpc/: README.md  __main__.py  client.py  pyproject.toml
a2a/examples/langgraph/: README.md  __main__.py  agent.py  graph.py  pyproject.toml
a2a/jsonrpc/: README.md  client.py  pyproject.toml
a2a/langgraph/: README.md  graph.py
chat-api/: README.md  chat.js  package-lock.json  package.json
d3-mcp-client/: README.md  pyproject.toml
d3-mcp-client/src/d3_mcp_client/common/: config.py
d3-mcp-client/src/d3_mcp_client/examples/langgraph/: main.py
d3-react-app/: README.md  package-lock.json  package.json
d3-react-app/app/chats/[chatId]/: page.tsx
d3-react-app/components/: chat-input.tsx  chat-page.tsx  chat.tsx  navbar.tsx
d3-react-app/types/: messages.ts
langgraph-analytics/: README.md  package-lock.json  package.json
langgraph-analytics/src/: graph.js  index.js
langgraph-analytics/src/nodes/: analyzeResults.js  classifyQuestion.js  cubeQuery.js  generateInsights.js
langgraph-analytics/src/state/: schema.js
mcp/: .gitignore  README.md  pyproject.toml
mcp/common/: __init__.py  client.py  config.py
mcp/examples/fastmcp/: README.md  agent.py
mcp/examples/langgraph/: README.md  main.py  pyproject.toml
mcp/js/: README.md  langgraph-client.js  main.js  package.json
mcp/js/claude-desktop/: README.md  generate-auth-token.js  package-lock.json
mcp/js/langgraph/: main.js
react-app/: README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
react-app/app/: layout.tsx  page.tsx
react-app/app/api/stream-chat-state/: route.ts
react-app/app/chats/: page.tsx
react-app/components/: chat-input.tsx  chat-page.tsx  navbar.tsx  vega-chart.tsx
react-app/types/: cube-agent-client.d.ts  messages.ts
shared/cube-agent-client/: README.md  index.js  package.json
