[project]
name = "d3-examples-a2a"
version = "0.1.0"
description = "A2A D3 examples."
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common"]

[tool.uv.workspace]
members = [
    "examples/langgraph",
    "examples/jsonrpc",
    "examples/crewai",
]