[project]
name = "d3-mcp-client"
version = "0.1.0"
description = "MCP D3 client with examples."
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "openai",
    "langgraph",
    "langchain",
    "langchain-openai",
    "pyjwt",
    "httpx",
    "httpx-sse",
    "anyio",
]

[project.scripts]
mcp-langgraph-example = "d3_mcp_client.examples.langgraph.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/d3_mcp_client"]

[tool.uv.workspace]
members = [
    "src/d3_mcp_client/examples/langgraph",
] 