[project]
name = "cube_a2a_crewai"
version = "0.1.0"
description = "Cube A2A for CrewAI"
authors = [{ name = "Cube", email = "support@cube.dev" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "pyjwt>=2.10.1",
]

[project.scripts]
run_crew = "cube_a2a_crewai.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
