[project]
name = "a2a-jsonrpc-client"
version = "0.1.0"
description = "A simple JSON-RPC client for A2A agents."
authors = [{ name = "Cube Dev Inc.", email = "support@cube.dev" }]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "pyjwt>=2.8.0",
]

[project.scripts]
jsonrpc-client = "client:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["client.py"] 