[project]
name = "d3-examples-a2a-jsonrpc"
version = "0.1.0"
readme = "README.md"
description = "A simple JSON-RPC client for D3 A2A agents."
authors = [{ name = "Cube Dev Inc.", email = "support@cube.dev" }]
requires-python = ">=3.12"
dependencies = [
    "d3-examples-a2a",
    "httpx>=0.27.2",
    "httpx-sse>=0.4.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."] 

[tool.uv.sources]
d3-examples-a2a = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
