[project]
name = "a2a-langgraph-example"
version = "0.1.0"
description = "LangGraph example interacting with an A2A agent."
authors = [{ name = "Cube Dev Inc.", email = "support@cube.dev" }]
requires-python = ">=3.9.0"
dependencies = [
    "langgraph>=0.1.10",
    "langchain-openai>=0.1.17",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "pyjwt>=2.8.0",
]

[project.scripts]
langgraph-a2a = "graph:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graph.py"] 