[project]
name = "d3-examples-a2a-langgraph"
version = "0.1.0"
description = "LangGraph example interacting with D3 agent via A2A."
authors = [{ name = "Cube Dev Inc.", email = "support@cube.dev" }]
requires-python = ">=3.12.0"
dependencies = [
    "d3-examples-a2a",
    "langgraph>=0.1.10",
    "langchain-openai>=0.1.17",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 

[tool.uv.sources]
d3-examples-a2a = { workspace = true }
